@@ -12,17 +12,16 @@
  *******************************************************************************/
 package org.cloudfoundry.identity.uaa.authentication;
 
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.LinkedHashSet;
-import java.util.Map;
-
 import org.cloudfoundry.identity.uaa.user.ExtendedUaaAuthority;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.util.Assert;
 import org.springframework.util.StringUtils;
+
+import java.util.Collection;
+import java.util.Collections;
+import java.util.LinkedHashSet;
+import java.util.Map;
 
 /**
  * Authentication request object which contains the JSON data submitted to the
@@ -40,17 +39,14 @@ public class AuthzAuthenticationRequest implements Authentication {
 
     public AuthzAuthenticationRequest(Map<String, String> info, UaaAuthenticationDetails details) {
         this.info = Collections.unmodifiableMap(info);
-        Assert.notNull(details);
+        Assert.notNull(details, "[Assertion failed] - details is required; it must not be null");
         this.details = details;
     }
 
     public AuthzAuthenticationRequest(String username, String password, UaaAuthenticationDetails details) {
         Assert.hasText(username, "username cannot be empty");
         Assert.hasText(password, "password cannot be empty");
-        HashMap<String, String> info = new HashMap<String, String>();
-        info.put("username", username.trim());
-        info.put("password", password.trim());
-        this.info = Collections.unmodifiableMap(info);
+        this.info = Map.of("username", username.trim(), "password", password.trim());
         this.details = details;
     }
 
