@@ -59,6 +59,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -216,7 +217,7 @@ public class OIDCLoginIT {
     }
 
     private void doLogout(String zoneUrl) {
-        for (String url : Arrays.asList("http://simplesamlphp.cfapps.io/module.php/core/authenticate.php?as=example-userpass&logout", baseUrl + "/logout.do", zoneUrl + "/logout.do")) {
+        for (String url : Arrays.asList(IntegrationTestUtils.SIMPLESAMLPHP_UAA_ACCEPTANCE + "/module.php/core/authenticate.php?as=example-userpass&logout", baseUrl + "/logout.do", zoneUrl + "/logout.do")) {
             webDriver.get(url);
             webDriver.manage().deleteAllCookies();
         }
@@ -251,7 +252,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProvider() throws Exception {
+    public void successfulLoginWithOIDCProvider() {
         Long beforeTest = System.currentTimeMillis();
         validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         Long afterTest = System.currentTimeMillis();
@@ -264,7 +265,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testLoginWithInactiveProviderDoesNotWork() throws Exception {
+    public void testLoginWithInactiveProviderDoesNotWork() {
         webDriver.get(zoneUrl + "/logout.do");
         webDriver.get(zoneUrl + "/");
         Cookie beforeLogin = webDriver.manage().getCookieNamed("JSESSIONID");
@@ -288,9 +289,9 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testLoginWithLoginHintUaa() throws Exception {
+    public void testLoginWithLoginHintUaa() {
         webDriver.get(zoneUrl + "/logout.do");
-        String loginHint = URLEncoder.encode("{\"origin\":\"puppy\"}", "utf-8");
+        String loginHint = URLEncoder.encode("{\"origin\":\"puppy\"}", StandardCharsets.UTF_8);
 
         webDriver.get(zoneUrl + "/login?login_hint=" + loginHint);
 
@@ -298,7 +299,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderWithExternalGroups() throws Exception {
+    public void successfulLoginWithOIDCProviderWithExternalGroups() {
 
         validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         String adminToken = IntegrationTestUtils.getClientCredentialsToken(serverRunning, "admin", "adminsecret");
@@ -310,7 +311,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderAndClientAuthInBody() throws Exception {
+    public void successfulLoginWithOIDCProviderAndClientAuthInBody() {
         identityProvider.getConfig().setClientAuthInBody(true);
         assertTrue(identityProvider.getConfig().isClientAuthInBody());
         updateProvider();
@@ -319,7 +320,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderSetsLastLogin() throws Exception {
+    public void successfulLoginWithOIDCProviderSetsLastLogin() {
         login(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         doLogout(zoneUrl);
         login(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
@@ -352,7 +353,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testShadowUserNameDefaultsToOIDCSubjectClaim() throws Exception {
+    public void testShadowUserNameDefaultsToOIDCSubjectClaim() {
         Map<String, Object> attributeMappings = new HashMap<>(identityProvider.getConfig().getAttributeMappings());
         attributeMappings.remove(USER_NAME_ATTRIBUTE_NAME);
         identityProvider.getConfig().setAttributeMappings(attributeMappings);
@@ -480,7 +481,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testResponseTypeRequired() throws Exception {
+    public void testResponseTypeRequired() {
         BaseClientDetails uaaClient = new BaseClientDetails(new RandomValueStringGenerator().generate(), null, "openid,user_attributes", "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write,uaa.resource", baseUrl);
         uaaClient.setClientSecret("secret");
         uaaClient.setAutoApproveScopes(Collections.singleton("true"));
@@ -512,7 +513,7 @@ public class OIDCLoginIT {
         config.setRelyingPartyId("8c5ea049-869e-47f8-a492-852a05f507af");
         config.setRelyingPartySecret(null);
         config.setIssuer("https://sts.windows.net/9bc40aaf-e150-4c30-bb3c-a8b3b677266e/");
-        config.setScopes(Arrays.asList("openid"));
+        config.setScopes(Collections.singletonList("openid"));
         config.setResponseType("code id_token");
         return config;
     }
